# Vulkan-BrickBreaker

./: CMakeLists.txt  LICENSE  README.md  common.h  main.cpp
app/: application.cpp  application.h  assetsloader.cpp  assetsloader.h  drawables.cpp  drawables.h  drawcommandbuffer.cpp  drawcommandbuffer.h  gcore.cpp  gcore.h  scene.cpp  scene.h  shaderpipeline.cpp  shaderpipeline.h  swapchainresources.cpp  swapchainresources.h
cmake/modules/: FindGLFW3.cmake  FindGLM.cmake
game/: background.cpp  background.h  ball.cpp  ball.h  brick.cpp  brick.h  camera.cpp  camera.h  collisions.cpp  collisions.h  paddle.cpp  paddle.h  platform.cpp  platform.h
models/: vkgame_background.mtl  vkgame_background.obj.lut1  vkgame_ball.mtl  vkgame_ball.obj.lut1  vkgame_bar.mtl  vkgame_bar.obj.lut1  vkgame_block.mtl  vkgame_block.obj.lut1  vkgame_platform.mtl  vkgame_platform.obj.lut1
shaders/: frag.spv  vert.spv
shaders/sources/: compile.bat  shader_default.frag  shader_default.vert
vkinterface/: buffer.cpp  buffer.h  commandbuffer.cpp  commandbuffer.h  debugmessenger.cpp  debugmessenger.h  descriptors.cpp  descriptors.h  descriptorset.cpp  descriptorset.h  extensions.cpp  extensions.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  imageview.cpp  imageview.h  instance.cpp  instance.h  logicaldevice.cpp  logicaldevice.h  physicaldevice.cpp  physicaldevice.h  pipeline.cpp  pipeline.h  pipelinelayout.cpp  pipelinelayout.h  queue.cpp  queue.h  renderpass.cpp  renderpass.h  shader.cpp  shader.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  synchronization.cpp  synchronization.h  (+10 more)
